feat: Set up keyboard navigation for dropdown list
The dropdown list now responds to keyboard events, so that it behaves in the expected way.
- Created the functions navigateList, addActive and removeActive in autocomplete.js

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,7 +15,7 @@
     <input type="text" id="zip" placeholder="enter zip code here">
   </div>
   <!-- This autocomplete form is based on https://www.w3schools.com/howto/howto_js_autocomplete.asp-->
-  <form action="#" autocomplete="off">
+  <form id="tripInfo" action="#" autocomplete="off">
     <div class="autocomplete">
       <input class="form__city" type="text" id="city" name="city" placeholder="City">
       <input id="country" name="country" type="hidden" value="">
