feat: Create date input elements and add event listeners
Added two date input elements to the view for the start and end date of the trip.
They are initialized with the current date and the day after respectively.
Added event listeners to the input fields. They update two divs with the duration and
the time remaining to the trip when the value in the date fields changes.

- Create and link date.js
- Create event listeners in date.js
- Add input elements in index.html
- Set up the event listeners in index.js

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,12 +17,19 @@
   <!-- This autocomplete form is based on https://www.w3schools.com/howto/howto_js_autocomplete.asp-->
   <form id="tripInfo" action="#" autocomplete="off">
     <div class="autocomplete">
+      <label for="city">Destination</label>
       <input class="form__city" type="text" id="city" name="city" placeholder="City">
       <input id="country" name="country" type="hidden" value="">
       <input id="latitude" name="latitude" type="hidden" value="">
       <input id="longitude" name="longitude" type="hidden" value="">
+      <label for="start">Start Date</label>
+      <input type="date" id="start">
+      <label for="end">End Date</label>
+      <input type="date" id="end">
     </div>
   </form>
+  <div>Your trip is in <span id="time-to-trip">1 day</span></div>
+  <div>Duration of the trip: <span id="duration">1 day</span></div>
   <div class ="holder feel">
     <label for="feelings">How are you feeling today?</label>
     <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
