--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Weather Journal</title>
-<link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-</head>
- <body>
-<div id = "app">
-  <div class ="holder headline">
-    Weather Journal App
-  </div>
-  <div class ="holder zip">
-    <label for="zip">Enter Zipcode here</label>
-    <input type="text" id="zip" placeholder="enter zip code here">
-  </div>
-  <!-- This autocomplete form is based on https://www.w3schools.com/howto/howto_js_autocomplete.asp-->
-  <form id="tripInfo" action="#" autocomplete="off">
-    <div class="autocomplete">
-      <label for="city">Destination</label>
-      <input class="form__city" type="text" id="city" name="city" placeholder="City">
-      <input id="country" name="country" type="hidden" value="">
-      <input id="latitude" name="latitude" type="hidden" value="">
-      <input id="longitude" name="longitude" type="hidden" value="">
-      <label for="start">Start Date</label>
-      <input type="date" id="start">
-      <label for="end">End Date</label>
-      <input type="date" id="end">
-    </div>
-  </form>
-  <div>Your trip is in <span id="time-to-trip">1 day</span></div>
-  <div>Duration of the trip: <span id="duration">1 day</span></div>
-  <div class ="holder feel">
-    <label for="feelings">How are you feeling today?</label>
-    <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-    <button id="generate" type = "submit"> Generate </button>
-  </div>
-  <div class ="holder entry">
-    <div class = "title">Most Recent Entry</div>
-   <div id = "entryHolder">
-    <div id = "date"></div>
-   <div id = "temp"></div>
-   <div id = "content"></div>
-  </div>
-  </div>
-  </div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Travel Journal</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div id="app">
+            <div class="holder headline">Travel App</div>
+            <!-- This autocomplete form is based on https://www.w3schools.com/howto/howto_js_autocomplete.asp-->
+            <form id="tripInfo" action="#" autocomplete="off">
+                <div class="autocomplete">
+                    <label for="city">Destination</label>
+                    <input
+                        class="form__city"
+                        type="text"
+                        id="city"
+                        name="city"
+                        placeholder="City"
+                    />
+                    <input id="country" name="country" type="hidden" value="" />
+                    <input
+                        id="latitude"
+                        name="latitude"
+                        type="hidden"
+                        value=""
+                    />
+                    <input
+                        id="longitude"
+                        name="longitude"
+                        type="hidden"
+                        value=""
+                    />
+                </div>
+                <label for="start">Start Date</label>
+                <input type="date" id="start" />
+                <label for="end">End Date</label>
+                <input type="date" id="end" />
+                <input type="submit" value="Submit" id="submit" />
+            </form>
+            <div>Your trip is in <span id="time-to-trip">1 day</span></div>
+            <div>Duration of the trip: <span id="duration">1 day</span></div>
+        </div>
+    </body>
 </html>
