--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Travel Journal</title>
+        <title>Travel App</title>
         <link
             href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap"
             rel="stylesheet"
@@ -37,9 +37,9 @@
                     />
                 </div>
                 <label for="start">Start Date</label>
-                <input type="date" id="start" />
+                <input type="date" id="start" name="startDate" />
                 <label for="end">End Date</label>
-                <input type="date" id="end" />
+                <input type="date" id="end" name="endDate" />
                 <input type="submit" value="Submit" id="submit" />
             </form>
             <div>Your trip is in <span id="time-to-trip">1 day</span></div>
