feat: Show simple version of the weather report in the view
- Add weather section in index.html
- Created simple cards for both the current weather and forecast
- Fix bug in app.js that prevented latitude and longitude parameters from
  being sent to the server
- Fix typo in server.js

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -44,6 +44,7 @@
             </form>
             <div>Your trip is in <span id="time-to-trip">1 day</span></div>
             <div>Duration of the trip: <span id="duration">1 day</span></div>
+            <section id="weather" class="weather"></section>
         </div>
     </body>
 </html>
