feat: Wrap picture element in anchor tag to link to Pixabay

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -46,7 +46,11 @@
             <div>Duration of the trip: <span id="duration">1 day</span></div>
             <section id="weather" class="weather"></section>
             <figure id="photo">
-                <img src="" alt="" type="image/jpeg" />
+                <a href="#" id="photo__link">
+                    <picture>
+                        <img src="" alt="" type="image/jpeg" />
+                    </picture>
+                </a>
                 <figcaption id="caption"></figcaption>
             </figure>
         </div>
