refactor: Change id names in index.html

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -37,12 +37,12 @@
                     />
                 </div>
                 <label for="startDate">Start Date</label>
-                <input type="date" id="startDate" name="startDate" />
+                <input type="date" id="startDate" name="startDate" value="" />
                 <label for="endDate">End Date</label>
-                <input type="date" id="endDate" name="endDate" />
+                <input type="date" id="endDate" name="endDate" value="" />
                 <input type="submit" value="Submit" id="submit" />
             </form>
-            <div>Your trip is in <span id="daysToTrip">1 day</span></div>
+            <div>Your trip is in <span id="daysToTrip">0 days</span></div>
             <div>Duration of the trip: <span id="duration">1 day</span></div>
             <section id="weather" class="weather"></section>
             <figure id="photo">
