fix: Make application work on IE 11
Support for IE 11 is necessary to make sure the application can be tested
on a browser without support for the date input element, since I don't have
convenient access to a computer running the Desktop version of Safari.

To make sure the application works in this enviroment, the following steps
were taken:

- Install browserslist as dev dependency
- Install and import core js 3 in index.js
- Install and import regenerator-runtime in index.js
- Install and import whatwg-fetch index.js
- Configure core js in .babelrc
- Replace the for of loop on an HTMLCollection with a traditional foor loop
  in the clearAllList method viewUpdater.js
- Replace the call to prepend with a call to appendChild in the updatePicture
  method of viewUpdater
- Remove the hard-coded img element from index.html and replace it with a
  dynamically created element in the updatePicture method of viewUpdater
- Fix a bug in applicationState.js involving a wrongly named parameter.

Solves #14

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -46,9 +46,7 @@
             <div>Duration of the trip: <span id="duration">1 day</span></div>
             <section id="weather" class="weather"></section>
             <figure id="photo">
-                <picture>
-                    <img src="" alt="" type="image/jpeg" />
-                </picture>
+                <picture></picture>
                 <figcaption id="caption"></figcaption>
             </figure>
         </div>
