feat: Add fallback option for browsers that don't support date input
Some modern browsers, notably Safari for desktop, still don't support
the date input element. A fallback date picker using select elements is
now provided.

- Create dateInputFactory to create the appropriate kind of input element
- Set dateInputFactory as an injected dependency in dateController.js
- Create methods to render the date inputs in viewUpdater.js
- Remove hard-coded date input elements and labels from index.html
- Set up the dateInputFactory and dateController in index.js

Solves #13

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,24 +22,9 @@
                         name="city"
                         placeholder="City"
                     />
-                    <input id="country" name="country" type="hidden" value="" />
-                    <input
-                        id="latitude"
-                        name="latitude"
-                        type="hidden"
-                        value=""
-                    />
-                    <input
-                        id="longitude"
-                        name="longitude"
-                        type="hidden"
-                        value=""
-                    />
                 </div>
-                <label for="startDate">Start Date</label>
-                <input type="date" id="startDate" name="startDate" value="" />
-                <label for="endDate">End Date</label>
-                <input type="date" id="endDate" name="endDate" value="" />
+                <div class="date" id="startDate__container"></div>
+                <div class="date" id="endDate__container"></div>
                 <input type="submit" value="Submit" id="submit" />
             </form>
             <div>Your trip is in <span id="daysToTrip">0 days</span></div>
