feat: Improve error handling for pictures on the client side
The ui now shows informative messages if there is an error while fetching
the pictures.

- Create an error handling anonymous function in app.js
- Create methods in viewUpdater.js to show and clear error messages

Solves #15

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -35,6 +35,7 @@
             <div>Your trip is in <span id="daysToTrip">0 days</span></div>
             <div>Duration of the trip: <span id="duration">1 day</span></div>
             <section id="weather" class="weather"></section>
+            <p id="photo-error"></p>
             <figure id="photo">
                 <picture></picture>
                 <figcaption id="caption"></figcaption>
