feat: Set up heading level structure
Make sure that the page has a correct heading hierarchy.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,10 +13,10 @@
             <h1>Travel App</h1>
         </header>
         <main>
-            <header>
-                <h2>Where do you want to travel next?</h2>
-            </header>
             <section>
+                <header>
+                    <h2>Where do you want to travel next?</h2>
+                </header>
                 <form id="tripInfo" action="#" autocomplete="off">
                     <p id="city-error"></p>
                     <!-- This input element with autocomplete functionality is based on https://www.w3schools.com/howto/howto_js_autocomplete.asp-->
@@ -40,7 +40,9 @@
                 </form>
             </section>
             <section>
+                <h2>Your next trip</h2>
                 <article>
+                    <h3>Destination</h3>
                     <div>
                         Your trip is in <span id="daysToTrip">0 days</span>
                     </div>
