feat: Set up correct relative location for the form elements
Use CSS flex and grid to place the childrend of the form element in their
correct relative locations for mobile, tablet and desktop devices.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,22 +25,23 @@
                     autocomplete="off"
                 >
                     <!-- This input element with autocomplete functionality is based on https://www.w3schools.com/howto/howto_js_autocomplete.asp-->
-                    <div class="autocomplete">
+                    <div class="form__field form__city">
                         <p
                             class="form__error error"
                             id="tripSelection__error--city"
                         ></p>
                         <label for="city">Destination</label>
-                        <input
-                            class="form__city"
-                            type="text"
-                            id="city"
-                            name="city"
-                            placeholder="City"
-                        />
+                        <div class="autocomplete">
+                            <input
+                                type="text"
+                                id="city"
+                                name="city"
+                                placeholder="City"
+                            />
+                        </div>
                     </div>
                     <div
-                        class="form__date"
+                        class="form__date form__field form__date--start"
                         id="tripSelection__container--startDate"
                     >
                         <p
@@ -49,7 +50,7 @@
                         ></p>
                     </div>
                     <div
-                        class="form__date"
+                        class="form__date form__field form__date--end"
                         id="tripSelection__container--endDate"
                     >
                         <p
@@ -58,6 +59,7 @@
                         ></p>
                     </div>
                     <input
+                        class="form__submit"
                         type="submit"
                         value="Submit"
                         id="tripSelection__submit"
