--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -2,6 +2,10 @@
     position: relative;
     display: inline-block;
 
+    &__input {
+        width: 100%;
+    }
+
     .autocomplete-items {
         position: absolute;
         border: 1px solid #d4d4d4;
