--- a/src/client/styles/layout.scss
+++ b/src/client/styles/layout.scss
@@ -1,10 +1,33 @@
+.tripSelection {
+    max-width: 50rem;
+    margin: 1rem 1rem auto 5rem;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+}
+
 .form {
     display: flex;
     flex-flow: column nowrap;
+    align-items: center;
 
     &__field {
         display: flex;
         flex-flow: column nowrap;
+        margin: 0.5rem 0;
+        width: 100%;
+        min-width: 20rem;
+        max-width: 30rem;
+    }
+
+    &__errors {
+        height: 3.2rem;
+        align-self: flex-start;
+        max-width: 30rem;
+    }
+
+    &__error {
+        max-width: 30rem;
     }
 
     &__date--fallback {
@@ -16,22 +39,29 @@
         display: flex;
         flex-flow: column nowrap;
     }
+
+    &__submit {
+        flex-basis: content;
+    }
 }
 
 @media only screen and (min-width: 768px) {
     .form {
         display: grid;
         grid-template:
+            'errors      errors' 1fr
             'destination destination' 1fr
             'startDate   endDate' 1fr
             'submit      submit' 1fr / 1fr 1fr;
+        gap: 1rem 1rem;
 
-        &__field {
-            flex-flow: row nowrap;
+        &__errors {
+            grid-area: errors;
         }
 
         &__city {
             grid-area: destination;
+            max-width: 62rem;
         }
 
         &__date {
@@ -46,6 +76,19 @@
 
         &__submit {
             grid-area: submit;
+            justify-self: center;
         }
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .tripSelection {
+        max-width: 60rem;
+    }
+
+    .form {
+        grid-template:
+            'errors      errors    errors  errors' 1fr
+            'destination startDate endDate submit' 1fr / 2fr 1fr 1fr 1fr;
     }
 }
