--- a/src/client/styles/resets.scss
+++ b/src/client/styles/resets.scss
@@ -129,6 +129,19 @@ table {
 }
 
 // *** Own Resets ***
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-synthesis: none;
+    font-size: 100%;
+    font-weight: normal;
+    vertical-align: baseline;
+    box-sizing: inherit;
+}
+
 a,
 a:hover,
 a:visited {
