--- a/src/client/styles/weather-icons/weather-icons.scss
+++ b/src/client/styles/weather-icons/weather-icons.scss
@@ -24,8 +24,9 @@
 @import 'weather-icons-variables.scss';
 @import 'weather-icons-classes.scss';
 // Mappings to various APIs
-@import "mappings/wi-yahoo.scss";
-@import "mappings/wi-forecast-io.scss";
-@import "mappings/wi-wmo4680.scss";
-@import "mappings/wi-owm.scss";
-@import "mappings/wi-wunderground.scss";
+@import 'mappings/wi-yahoo.scss';
+@import 'mappings/wi-forecast-io.scss';
+@import 'mappings/wi-wmo4680.scss';
+@import 'mappings/wi-owm.scss';
+@import 'mappings/wi-wunderground.scss';
+@import 'mappings/wi-weatherbit.scss';
