feat: Create basic weather card layout
- Create the basic weather card layout in weather.scss for mobile, tablet
and desktop

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -70,7 +70,7 @@
                 </section>
                 <section id="newTrip" class="newTrip">
                     <header class="newTrip__header">
-                        <h2>Your new trip <i class="wi wi-day-sunny"></i></h2>
+                        <h2>Your new trip</h2>
                     </header>
                     <article class="trip">
                         <header class="trip__header">
