--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -115,8 +115,12 @@
                             </p>
                         </section>
                         <section
-                            id="newTrip__weather"
-                            class="weather"
+                            id="newTrip__weather--current"
+                            class="weather weather--current"
+                        ></section>
+                        <section
+                            id="newTrip__weather--forecast"
+                            class="weather weather--forecast"
                         ></section>
                     </article>
                 </section>
