--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,4 +1,11 @@
 .header {
     margin: 1rem auto;
-    width: 80%;
+    min-width: 20rem;
+    max-width: 80%;
+}
+
+@media only screen and (min-width: 768px) {
+    .header {
+        width: 80%;
+    }
 }
