--- a/src/client/styles/layout.scss
+++ b/src/client/styles/layout.scss
@@ -35,7 +35,10 @@ main {
     height: 90vh;
     &__header {
         margin: 0 auto;
-        transform: translateX(-25%);
+
+        h2 {
+            width: 20rem;
+        }
     }
 }
 
