feat: Set colors and hover states
All elements have now their final colors. Interactive elements have a
hover state.

--- a/src/client/styles/base/base.scss
+++ b/src/client/styles/base/base.scss
@@ -1,3 +1,8 @@
 :root {
     font-size: 62.5%; // 10 / 16 = 0.625
 }
+
+body {
+    background-color: $orange-yellow-crayola;
+    color: $oxford-blue;
+}
