--- a/src/client/styles/base/colors.scss
+++ b/src/client/styles/base/colors.scss
@@ -1,4 +1,4 @@
-/* SCSS HSL */
+/* Color palette generated using coolors.com https://coolors.co/56a3a6-f4d06f-efe9f4-011936-c33149 */
 $cadet-blue: hsla(182, 32%, 49%, 1);
 $orange-yellow-crayola: hsla(44, 86%, 70%, 1);
 $magnolia: hsla(273, 33%, 94%, 1);
