--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'layout/footer.scss';
 
 @import 'components/form.scss';
+@import 'components/trip.scss';
 @import 'components/weather.scss';
 
 @import 'weather-icons/weather-icons.scss';
